# ResearchAI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.projectmap/: ARCHITECTURE.md  manifest.json  tags
.projectmap/modules/: shared.md  skills__literature-explorer.md  skills__paper-writer.md  skills__peer-reviewer.md  tests.md
commands/: algo.md  audit.md  explore.md  research.md  review.md  write.md
shared/: council.py  research_state.schema.md  venue_profiles.md
shared/prompts/: anti_hallucination.md  council_panel.md  execution_discipline.md  grill_protocol.md  model_dispatch.md  prose_hygiene.md  reviewer_intel.md  style_calibration.md  venue_calibration.md
skills/algo-brainstorm/: SKILL.md
skills/algo-brainstorm/checklists/: algorithm_card.md  stats_pitfalls.md
skills/algo-brainstorm/modes/: ablation-plan.md  formalize.md  gap-analysis.md  ideate.md  novelty-check.md  red-team.md  theory-scoping.md  toy-design.md
skills/literature-explorer/: SKILL.md  expert-dialogue.md  perspectives.md
skills/literature-explorer/scripts/: dedupe_rank.py  search_arxiv.py  search_openalex.py  search_openreview.py  search_semantic_scholar.py
skills/paper-writer/: SKILL.md
skills/paper-writer/modes/: citation-audit.md  full-draft.md  grant-nstc.md  outline.md  revision.md  (+3 more)
skills/peer-reviewer/: SKILL.md
skills/research-conductor/: SKILL.md  bootstrap.md  routing.md
tests/: conftest.py  test_check_prose.py  test_check_tex.py  test_check_venues.py  test_dedupe_rank.py  test_scan_injection.py
(+16 files in other folders)
