[project]
name = "research-assistant"
version = "0.1.0"
description = "Stats/ML research assistant Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lu-Hung Chen", email = "luhung@email.nchu.edu.tw" }]
dependencies = [
    "requests>=2.32",
    "httpx>=0.27",
    "tenacity>=8.0",
    "pybtex>=0.24",
]

[project.optional-dependencies]
storm = ["knowledge-storm>=1.1"]
figures = ["matplotlib>=3.8", "numpy>=1.26"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.uv]
package = false
